--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     - primary meta tag
   -->
   <title>techxcelerate</title>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2817793781473576"
+     crossorigin="anonymous"></script>
   <!-- 
     - custom css link
   -->
